app-deployment/base/chat-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-server
  namespace: $NAMESPACE
spec:
  selector:
    app: chat-server
  type: ClusterIP
  ports:
  - name: chat-server
    protocol: TCP
    port: 80
    targetPort: 80
