app-deployment/base/chat-server/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chat-server
  namespace: non-prod
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`chat.surawattest.online`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: chat-server
      port: 80
